change my reseume data

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="text-center">
                 <img class="profile_img mb-5" src="./images/portfolio.jpg" alt="my image">
             </div>
-            <p class="text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos consectetur voluptas totam nobis quos quo deleniti provident suscipit. Nam cupiditate dicta ut doloremque deleniti blanditiis tenetur ipsum autem, alias repudiandae? Eos, quasi ipsum quas voluptatibus cupiditate voluptates laboriosam ipsa labore iste, voluptatum accusamus aut, deleniti aliquam? Ipsam ut sed, tenetur inventore dolore cupiditate autem quasi rerum. Ducimus inventore odio molestias veniam? Consequatur eos, quisquam odit debitis ullam esse quod dicta beatae animi vel quia fugiat, vero alias maiores voluptate autem. Iste quaerat debitis eius incidunt rem doloremque est eligendi minus magni, libero a, quae, dolor inventore. Modi quos ipsum et.</p>
+            <p class="text-center">Hello! I'm a full stact developer and a teacher as well. The fun fact is, I'm a lyricist too. Lol! The best thing about me is - I love to code and love to learn new technologies. I’m a graduate with a passion for developing scalable web applications. I'm good at React, JavaScript, Bootstrap, HTML5, CSS3, SCSS and now I'm learnig React Native.  I have done several projects in React and you will find a list of my projects in my attached resume at the resume section and you can see some of my projects in 'My Woks' section as well.  </p>
             <div class="d-flex justify-content-center">
                 <a class="text-danger icon" href="https://www.linkedin.com/in/farhad-sayed-a81066211/"><i class="fab fa-linkedin fs-3 px-3 py-4"></i></a>
                 <a class="text-danger icon" href="https://github.com/Farhad-Sayed"><i class="fab fa-github-square fs-3 px-3 py-4"></i></a>
@@ -126,14 +126,14 @@
                         <h4>MSS (Economics)</h4>
                         <h5>2010-2011</h5>
                         <p><em>University Of Chittagong</em></p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam provident repudiandae rem quos dolor voluptas, eius temporibus nobis.</p>
+                        <p>After completing my graduation in Economics, I enrolled in the MSS programme and successfully obtained my MSS degree in Economics.</p>
                     </div>
                     <!--  -->
                     <div class="resume-des">
                         <h4>BSS (Economics)</h4>
                         <h5>2006-2007</h5>
                         <p><em>University Of Chittagong</em></p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam provident repudiandae rem quos dolor voluptas, eius temporibus nobis.</p>
+                        <p>After completing Higher Secondary Education (HSC) form sicence, I enrolled in the BSS programme in University of Chittagong and successfully obtained my BSS degree in Economics.</p>
                     </div>
                     <!--  -->
                 </div>
@@ -145,23 +145,22 @@
                         <p><em>AGGHS</em></p>
                         <p>
                             <ul>
-                                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
-                                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
-                                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
-                                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
-                                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
+                                <li>Assistant Teacher, Social Science</li>
+                                <li>2 years of professional experience in teaching</li>
+                                <li>Now in a BEd programme which will enhance my prodctivity, I believe</li>
+                                <li>Love to teach social science in a different manner</li>
+                                <li>Have a dream to establish a programming club at my school</li>
                             </ul>
                         </p>
                     </div>
                     <div class="resume-des">
                         <h4>Full Stack Developer</h4>
                         <h5>2020 - Present</h5>
-                        <p><em>Lorem ipsum dolor sit amet.</em></p>
+                        <p><em>Seeking for a Full Stck Developer Position</em></p>
                         <ul>
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                          <li>Proficient in developing in web application using React and integration with no SQL database using Mongo</li><br>
+                          <li>In depth knowledge of developing API with best practices</li><br>
+                          <li>Hands on experience in developing UI using HTML, CSS, JavaScript, Bootstrap, SCSS, React JS</li>
                         </ul>
                     </div>
                     <a href="https://drive.google.com/uc?export=download&id=1h7ctH7NMk_Cpx8suNsHxndgLDlvHs_pQ" target="_blank"><button class="btn btn-outline-success mt-5 py-3 fw-bold">Download Resume</button></a>
@@ -344,11 +343,11 @@
           <form id="contact-form">
             <div class="mb-4">
               <label for="exampleFormControlInput1" class="form-label">Name</label>
-              <input type="text" class="form-control" id="toName" placeholder="Jhon Doe">
+              <input type="text" name="to_name" class="form-control" id="toName" placeholder="Jhon Doe">
             </div>
             <div class="mb-4">
               <label for="exampleFormControlInput1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="fromName" placeholder="name@example.com">
+              <input type="email" name="from_name" class="form-control" id="fromName" placeholder="name@example.com">
             </div>
             <div class="mb-4">
               <label for="exampleFormControlTextarea1" class="form-label">Send message</label>
