a minor change on contact button

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <a class="text-danger icon" href="https://twitter.com/FarhadSayed5"><i class="fab fa-twitter-square fs-3 px-3 py-4"></i></a>
             </div>
             <div class="text-center mt-4">
-                <button id="#contact" class="btn btn-outline-success py-3 px-3">Contact Me</button>
+                <a href="#contact"><button class="btn btn-outline-success py-3 px-3">Contact Me</button></a>
             </div>
         </div>
     </section>
