--- a/index.html
+++ b/index.html
@@ -373,8 +373,7 @@
     <script>
         var typed = new Typed('.type', {
           strings: [
-              "Full Stack Developer",
-              "Full Stack Developer",
+              "Cyber Security Enthusiast",
               "Teacher",
               "Lyricist"
           ],
