--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
     <script>
         var typed = new Typed('.type', {
           strings: [
-              "Cyber Security Enthusiast",
+              "Security Enthusiast",
               "Teacher",
               "Lyricist"
           ],
