--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@
         var typed = new Typed('.type', {
           strings: [
               "Security Enthusiast",
+              "Security Enthusiast",
               "Teacher",
               "Lyricist"
           ],
