--- a/index.html
+++ b/index.html
@@ -376,6 +376,7 @@
               "Security Enthusiast",
               "Security Enthusiast",
               "Teacher",
+              "Security Enthusiast",
               "Lyricist"
           ],
           typeSpeed:100,
