--- a/index.html
+++ b/index.html
@@ -373,10 +373,10 @@
     <script>
         var typed = new Typed('.type', {
           strings: [
-              "Security Enthusiast",
-              "Security Enthusiast",
+              "Cyber Security Enthusiast",
+              "Cyber Security Enthusiast",
               "Teacher",
-              "Security Enthusiast",
+              "Cyber Security Enthusiast",
               "Lyricist"
           ],
           typeSpeed:100,
